# principle-econ

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: architecture.md
examples/scipts/: basic_equilibrium.py  common.py  dwl_report.py  elasticity_demo.py  elasticity_five_types_centered.py  price_controls.py  price_controls_welfare.py  run_all.py  shift_scenarios.py  tax_comparison.py  welfare_tax.py
scripts/: release.sh
src/principle_econ/: __init__.py  exceptions.py
src/principle_econ/api/: __init__.py  facade.py
src/principle_econ/cli/: __init__.py  main.py
src/principle_econ/core/: __init__.py  controls.py  elasticity.py  equilibrium.py  line.py  shifts.py
src/principle_econ/plot/: __init__.py  canvas.py  colors.py  figure.py  primitives.py  theme.py
src/principle_econ/plot/renderers/: __init__.py  controls.py  curves.py  equilibrium.py  metrics.py  tax.py  welfare.py
src/principle_econ/policy/: __init__.py  analysis.py  models.py  solver.py  tax.py  visual.py
src/principle_econ/welfare/: __init__.py  layout.py  report.py  surplus.py
tests/: test_canvas_model.py  test_cli_smoke.py  test_color_palettes.py  test_controls.py  test_elasticity.py  test_equilibrium.py  test_line.py  test_plot_smoke.py  test_shifts.py  test_tax.py  test_welfare.py
