[tool.poetry]
name = "principle-econ"
version = "0.1.0"
description = "Principles of Economics toolkit for demand/supply analytics and diagrams."
authors = ["Anthony Sung <sungpinyue@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/EconViz/principle-econ"
repository = "https://github.com/EconViz/principle-econ"
documentation = "https://github.com/EconViz/principle-econ"
keywords = ["economics", "microeconomics", "demand", "supply", "equilibrium", "welfare", "tax"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Education",
  "Topic :: Scientific/Engineering",
]
packages = [{ include = "principle_econ", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = ">=1.24.0"
matplotlib = ">=3.6.0,<4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0,<9.0.0"
pytest-cov = ">=5.0.0,<6.0.0"
ruff = ">=0.5.0,<1.0.0"

[tool.poetry.scripts]
principle-econ = "principle_econ.cli.main:main"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--maxfail=1 --disable-warnings -q"

[tool.coverage.run]
source = ["principle_econ"]

[tool.coverage.report]
show_missing = true
skip_covered = false
